# ArrayManager

./: .gitignore  ArrayManager.cpp  ArrayManager.h  CMakeLists.txt  FloatArrayManager.cpp  FloatArrayManager.h  FloatArrayManager.txt  README.md  UnitTests.cpp  library.properties
examples/basic/: basic.ino
